# hive

./: .gitignore  .gitmodules  README.md  madrona-implmentation.md
code/: 1-agent-dump  dumped_actions-mac  dumped_actions-mtog  pyproject.toml  setup.py
code/backup_src/: CMakeLists.txt  bindings.cpp  level_gen.cpp  level_gen.hpp  mgr.cpp  mgr.hpp  sim.cpp  types.hpp  viewer.cpp
code/chat_train_src/madrona_escape_room_learn/: actor_critic.py  cfg.py  models.py
code/checkpoints/og-env/: 7900.pth
code/ckpt-main-2reshape-truereward/: action-dump
code/ckpt-main5reshape-truereward/: action-dump
code/ckpts/10-ant-shared-mlp/: dump
code/ckpts/2-ant-shared-mlp/: dump
code/ckpts/3-ant-shared-mlp/: dump
code/ckpts/5-ant-mlp-dim/: dump-test
code/ckpts/5-attn-critic/: dump
code/ckpts/attn-both-3/: dump
code/clean_rl_train/: action_utils.py  ppo_models.py  ppo_recurrent copy.py  ppo_recurrent.py  ppo_utils.py
code/dumped_actions/: og-env-multiworld
code/dumps/: actions_1-ant-to-goal  actions_full-actor-model  actions_full-model  actions_full-model-5-ants  actor-no-pool  actor-no-pool-5ants  attn-both-solving-walls
code/results/: random_policy_results_20250523_153112.txt  random_policy_results_20250523_153112_data.npz
code/scripts/: infer.py  infer_bench.py  policy.py  run_experiment.sh  run_random_policy_experiment.py  setup_env.sh  train.py
code/src/: bindings.cpp  consts.hpp  headless.cpp  level_gen.cpp  level_gen.hpp  mgr.cpp  mgr.hpp  scratch.txt  sim.cpp  sim.hpp  types.hpp  viewer.cpp
code/train_src/: output.md
docs/: edits.md  prompt.md  (+3 more)
(+47 files in other folders)
