[build-system]
requires = []
build-backend = "madrona-py-build"
backend-path = ["external/madrona/py"]

[project]
name = "hive"
version = "0.0.1"

[tool.madrona.packages.madrona_escape_room]
ext-only = true
ext-out-dir = "build"

# This module includes the PPO implementation for the training demo
[tool.madrona.packages.hive_learn]
path = "train_src/hive_learn"
